fix: adding gap between project in tablets and small devices

--- a/src/index.css
+++ b/src/index.css
@@ -502,7 +502,7 @@ opacity: 1;
   .cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
     place-content: center;
     gap: 2rem;
   }
